[gd_scene load_steps=4 format=3 uid="uid://cxn51kvxg4nl1"]

[ext_resource type="Script" path="res://startskærm.gd" id="1_35nto"]
[ext_resource type="Texture2D" uid="uid://dtfpjkk4lpd1s" path="res://art/istockphoto-1354982067-612x612.jpg" id="2_vaje3"]
[ext_resource type="FontFile" uid="uid://vkhmh18xpgb2" path="res://fonts/Xolonium-Regular.ttf" id="3_g3one"]

[node name="Dødskærm" type="CanvasLayer"]
script = ExtResource("1_35nto")

[node name="Istockphoto-1354982067-612x612" type="Sprite2D" parent="."]
position = Vector2(585, 397)
scale = Vector2(2.12909, 3.16212)
texture = ExtResource("2_vaje3")

[node name="Startknap" type="Button" parent="."]
offset_left = 164.0
offset_top = 364.0
offset_right = 478.0
offset_bottom = 481.0
theme_override_fonts/font = ExtResource("3_g3one")
theme_override_font_sizes/font_size = 44
text = "Start"

[node name="Titel" type="Label" parent="."]
offset_left = 301.0
offset_top = 52.0
offset_right = 865.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("3_g3one")
theme_override_font_sizes/font_size = 64
text = "Rocket simulator"

[node name="Infoknap" type="Button" parent="."]
offset_left = 655.0
offset_top = 359.0
offset_right = 959.0
offset_bottom = 479.0
theme_override_fonts/font = ExtResource("3_g3one")
theme_override_font_sizes/font_size = 44
text = "Information"

[node name="Highscore" type="Label" parent="."]
offset_left = 465.0
offset_top = 196.0
offset_right = 676.0
offset_bottom = 245.0
theme_override_fonts/font = ExtResource("3_g3one")
theme_override_font_sizes/font_size = 40
text = "Highscore"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Startknap" to="." method="_on_startknap_pressed"]
[connection signal="pressed" from="Infoknap" to="." method="_on_infoknap_pressed"]
